# Eclipsium_manticore_crash

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  insert_document_schema.py  main.py  post_schema.py  pyproject.toml  search_schema.py
